--- a/directory_component/stylesheet.css
+++ b/directory_component/stylesheet.css
@@ -1,3 +1,6 @@
+html{
+    box-sizing: border-box;
+}
 body{
     background-color: aliceblue;
     display: flex;
@@ -48,6 +51,8 @@ h1{
     justify-content: space-between;
     height: 6vh;
     width: 100%;
+    padding: .5em;
+    border-radius: .75em;
 
 }
 
@@ -63,7 +68,7 @@ h1{
     flex-direction: column;
     justify-content: space-around;  
     align-self: flex-start;
-    padding: .25em;
+
 }
 
 .contact-component_details_name{
@@ -84,3 +89,6 @@ h1{
     margin-top: .75em;
 }
 
+.contact-component:nth-child(2n){
+    background-color: aqua;
+}
