--- a/ui_card/style.css
+++ b/ui_card/style.css
@@ -11,8 +11,9 @@ html{
     justify-content: space-between;
     background-color: bisque;
     border-radius: 1.5em;
-    height: 400px;
-
+    height: 375px;
+    margin-left: 15vw;
+    margin-top: 15vh;
 }
 
 header{
@@ -22,6 +23,7 @@ header{
     align-items: center;
     height: 50px;
     width: 100%;
+    padding-left: .5em;
 }
 
 /* .profile_post_image{
@@ -59,11 +61,12 @@ footer{
     display: flex;
     flex-direction: column;
     width: 70%;
-
+    padding-left: .5em;
 }
 
 .more_icon{
     order: 3;
+    
 }
 
 
